{{$NEXT}}

3.016     2024-11-12 16:18:40+01:00 Europe/Prague

Drivers:
* MUL::Unimorph
* CS::Pdtc: Unlike in CS::Pdt, the tag 'Cz.*' is for noun-like
  cardinal numerals, not for interrogative ordinal numerals.

Fixes:
* FeatureStructure methods is_affirmative() and is_negative() now
  reach to the feature 'polarity' instead of the deprecated
  'negativeness'.



3.015     2022-03-05 11:53:12+01:00 Europe/Prague

Features:
* Added feature 'strength' because of UD corpora that use it (Romanian,
  Gothic, Old Church Slavonic).
* Feature 'variant': added values 'a', 'b', 'c' (abbreviations in PDT-C).

Drivers:
* CS::Pdtc
* CS::Ridics
* LT::Jablonskis
* LT::Multext: Subjunctive mood changed to conditional, in order to make it
  more parallel to other Lithuanian and Latvian corpora in UD.
* Changed mapping of Lithuanian non-finite verb forms:
  * dalyvis (participle) = verb, participle
  * padalyvis (same subject converb) = verb, gerund
  * pusdalyvis (different subject converb) = verb, converb
  * būdinys (adverbial participle of manner) = adverb, converb



3.014     2019-01-31 14:30:16+01:00 Europe/Prague

Drivers:
* LT::Multext: The sixth character of nouns is not adjform. It is probably
  reflexivity.
* LT::Multext: The seventh character of adjectives, sixth of pronouns, seventh
  of numerals and tenth of verbs is better characterized as definiteness,
  although adjform is not exactly wrong.
* LT::Multext: The last character of verbs (participles only) is degree
  of comparison.



3.013     2019-01-14 21:42:51+01:00 Europe/Prague

Features:
* Feature 'numform': added value 'combi' (combined digits + suffix).

Drivers:
* LT::Multext



3.012     2018-05-15 11:11:11+02:00 Europe/Prague

Interface:
* FS methods add_ufeatures() and get_ufeatures() now store unknown language-
  specific features or values in the 'other' feature (and set tagset to
  'mul::uposf').



3.011     2018-02-18 14:17:13+01:00 Europe/Prague

Features: